--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section id="p2">The Boolean <section id="p">Scritto da </section></section>
     <p id="p">il 10/10/2020</p><br><br>
     <!-- immagine piu didascalia -->
-    <div>
-        <img src="./img/tim-1.jpg" alt="">
-        <img src="./img/tim-2.jpg" alt="">
+    <div class="cont_img">
+        <img src="./img/tim-1.jpg" alt="" id="immagine" style=" height: auto;">
+        <img src="./img/tim-2.jpg" alt="" id="immagine" style=" height: 362px;">
         <p style="margin-top: 0%; margin-bottom: 0%;">1st Photo:Jhon S. and James L.Knight Foundation, by scott Henrichsen</p>
         <p style="margin-top: 0%; margin-bottom: 0%;">2nd Photo: Wikimedia, by Paul Clarke</p>
     </div>
